@@ -26,10 +26,9 @@ public class StartupUtil {
      * @return 全为零代表包含开机启动且启动项有效，如果第1位为1则为包含启动项但启动项无效，如果第2位为1则为不存在启动项或检查失败，
      */
     public static int hasStartup() {
-        String command = "cmd.exe /c chcp 65001 & schtasks /query /V /tn \"File-Engine\"";
         Process p = null;
         try {
-            p = Runtime.getRuntime().exec(command);
+            p = Runtime.getRuntime().exec(new String[]{"cmd.exe", "/c", "chcp", "65001", "&", "schtasks", "/query", "/V", "/tn", "\"File-Engine\""});
             p.waitFor();
             String keys = "";
             String results = "";
@@ -117,7 +116,7 @@ public class StartupUtil {
         Path xmlPath = Path.of(tmpDir, "schtasks-File-Engine.xml");
         Files.writeString(xmlPath, xmlContent, StandardCharsets.UTF_16LE);
         String command = String.format("cmd.exe /c schtasks /create /xml %s /tn \"File-Engine\"", xmlPath.getFileName());
-        Process exec = Runtime.getRuntime().exec(command, null, new File(tmpDir));
+        Process exec = Runtime.getRuntime().exec(new String[]{command}, null, new File(tmpDir));
         exec.waitFor();
         return exec;
     }
@@ -132,7 +131,7 @@ public class StartupUtil {
     public static Process deleteStartup() throws InterruptedException, IOException {
         String command = "cmd.exe /c schtasks /delete /tn \"File-Engine\" /f";
         Process p;
-        p = Runtime.getRuntime().exec(command);
+        p = Runtime.getRuntime().exec(new String[]{command});
         p.waitFor();
         return p;
     }
